# agentsonrent

./: .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  privacy.html  terms.html  vite.config.js  wrangler.toml
contracts/: Anchor.toml  DEPLOY.md  README.md
contracts/agentrent_escrow/: Cargo.toml
contracts/agentrent_escrow/src/: lib.rs
contracts/client/: escrow-client.ts
contracts/scripts/: deploy.ps1  init-protocol.ts  package.json
contracts/tests/: escrow.ts
src/api/: worker.js
src/lib/: agent-dashboard.js  api-client.js  app.js  user-dashboard.js  utils.js  wallet.js
src/pages/: agent-dashboard.html  user-dashboard.html
src/styles/: dashboard.css  main.css
