[package]
name = "agentrent-escrow"
version = "0.1.0"
description = "AgentRent Escrow Program - Trustless USDC payments for AI agent services"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentrent_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
